--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1 id="first-heading">WELCOME TO KENNETH MUOGHALU'S HOME PAGE</h1>
         <section class="card" id="about">
             <h2>ABOUT ME</h2>
-            <p id="para1">I'm Kenneth Muoghalu I was born and raised in the Nigeria. I'm currently pursuing a degree in Professional studies at BYU-Idaho through BYU-Pathway Worldwide.</p><br>
+            <p id="para1">I'm Kenneth Muoghalu I was born and raised in Nigeria. I'm currently pursuing a degree in Professional studies at BYU-Idaho through BYU-Pathway Worldwide.</p><br>
             <img src="images/profile.webp" alt="Profile Picture">
             <p id="para2"> I have many hobbies which are: birdwatching, relaxing at the beach,
                 playing video games, and reading books!
