--- a/images/week01/basic-layout.html
+++ b/images/week01/basic-layout.html
@@ -30,7 +30,7 @@
     </aside>
     <footer>
         Footer Content
-        <p>&copy;2025 &#128059; Shania Esguerra &#128059; Alberta,Canada</p>
+        <p>&copy;2025 &#128059; Kenneth Muoghalu&#128059; Lagos, Nigeria</p>
     </footer>
 </body>
 
