--- a/temples.html
+++ b/temples.html
@@ -7,7 +7,7 @@
   <title>WDD 131 - W02 Picture Album Assignment - Kenneth Muoghalu</title>
   <meta name="description"
     content="Kenneth Muoghalu's Week 02 Assignment: Picture Album for WDD 131 - Dynamic Web Fundamentals">
-  <meta name="author" content="Shania Esguerra">
+  <meta name="author" content="Kenneth Muoghalu">
   <link rel="stylesheet" href="styles/temples.css">
   <link rel="stylesheet" href="styles/temples-large.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
